# auth

./: .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_README.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build-and-push-image.yml  deploy-prod.yaml  deploy-staging.yaml  deploy.yaml  dev-deploy.yml  docker.yaml  flake8.yaml  lint.yaml  pre-commit.yaml  prod-deploy.yml  source.yaml  sync.yaml
app/: __init__.py  app.py  cache.py  config.py  constants.py  health.py  metrics.py  pesu.py  test.py  util.py
app/docs/: __init__.py  authenticate.py  base.py  health.py  metrics.py  readme.py
app/exceptions/: __init__.py  authentication.py  base.py  csrf.py  exceptions.py  network.py  parsing.py  profilefetch.py
app/middleware/: __init__.py  logging.py  metrics.py  rate_limiting.py
app/models/: __init__.py  profile.py  request.py  response.py
scripts/: analyze_benchmark.py  benchmark_auth.py  run_tests.py  test_csrf.py
scripts/benchmark/: analyze_benchmark.py  benchmark_requests.py  unauthenticated_csrf_token_expiry.py  util.py
tests/: conftest.py
tests/functional/: test_authenticate_functional.py  test_health_check.py
tests/integration/: test_app_integration.py  test_authenticate_integration.py  test_exception_handler.py  test_metrics_integration.py  test_new_features.py
tests/unit/: test_app_unit.py  test_authenticate_unit.py  test_constants.py  test_metrics.py  test_pesu.py  test_readme.py  test_request_model.py  test_requests.py  test_validation.py
